# Search_vacancy

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
data/: test.json  vacantions.json
src/: cl_parser.py  cl_storage.py  cl_vacancy.py  classes.py  functions.py
tests/: test_cl_storage.py  test_cl_vacancy.py  test_classes.py  test_clparser.py  test_functions.py
