[project]
name = "search-vacancy"
version = "0.1.0"
description = "Поиск вакансий на платформе hh.ru"
authors = [
    {name = "Kokc80",email = "kokc@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Исключены из проверки
exclude = '''
(
  /(
    \.git
    |.venv
    | venv
  )/
)'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '''
(
  /(
    \.venv
  )/
)'''
